Fix vertical alignment on IE9

--- a/sass/OI.modal.scss
+++ b/sass/OI.modal.scss
@@ -52,6 +52,7 @@ body.no-scroll {
       transform: translateY(0);
       -moz-transform: translateY(0);
       -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
     }
     
     &.show {
@@ -68,6 +69,7 @@ body.no-scroll {
     transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     margin: 0 auto;
     width: 400px;
     background: #fff;
